About and Contact menu padding fixed on mobile

--- a/site/components/pages/about/--mobile/about--mobile.scss
+++ b/site/components/pages/about/--mobile/about--mobile.scss
@@ -8,6 +8,6 @@
   }
 
   .about__services {
-    padding: 0;
+    padding: 0 0 $lem;
   }
 }
