--- a/site/components/pages/contact/--mobile/contact--mobile.scss
+++ b/site/components/pages/contact/--mobile/contact--mobile.scss
@@ -9,5 +9,6 @@
 
   .contact__links {
     padding-top: $lem;
+    padding-bottom: $lem;
   }
 }
